test/golden/1398692563425247859.golden

INITIALPATH:7:22: error:
    • INITIALPATH:10:5:
   |
10 | {pi:l}|]
   |     ^
unexpected 'l'
expecting '#', '%', '+', '-', '.', '0', 'E', 'F', 'G', 'X', 'b', 'c', 'd', 'e', 'f', 'g', 'n', 'o', 's', 'x', '}', integer, or space

    • In the quasi-quotation: [fmt|hello


{pi:l}|]
  |
7 | main = putStrLn [fmt|hello
  |                      ^^^^^...
